# nbodysolver

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
nbodysolver/: Cargo.toml
nbodysolver-py/: Cargo.toml  LICENSE  Makefile  pyproject.toml
nbodysolver-py/python/nbodysolver/: __init__.py  example_systems.py  nbodysolver.pyi  nbodywrapper.py  plotting.py
nbodysolver-py/scripts/: lorenz_test.py  n_body_benchmarks.py  n_body_plots.py  periodic.py  standalone_profile.py
nbodysolver-py/src/: lib.rs  lorenz_py.rs  n_body_py.rs  n_body_py_faster.rs
nbodysolver/src/: lib.rs  lorenz.rs  main.rs  n_body.rs  n_body_core.rs  n_body_faster.rs  n_body_wrapper.rs
python/nbodysolver/: __init__.py  example_systems.py
scripts/: 3_body_test.py  lorenz_test.py  n_body_benchmarks.py  n_body_plots.py  solo_test.py  testing.py  three_body_test.py
src/: lib.rs  lorenz.rs  n_body.rs  three_body.rs
