[workspace]
members = ["nbodysolver"]

[workspace.package]
authors = ["Lim Hua En"]
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/shawn1368/nbodysolver"
resolver = "2"

[workspace.dependencies]
itertools = "0.11.0"
ndarray = { version = "0.15.6", features = ["serde"] }
ndarray-linalg = "0.16.0"
numpy = "0.20.0"
pyo3 = "0.20.0"
num = "0.4.1"
serde = "1.0.189"
serde_json = "1.0.107"
plotters = "0.3.5"
plotly = "0.8.4"
nbodysolver = { version = "0.1.0", path = "nbodysolver" }
