[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "nbodysolver"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
version = "0.1.0"
description = "An n-body solver written in Rust."
authors = [
    {name = "shawn1368", email = "huaen.lim@gmail.com"},
]
dependencies = [
    "matplotlib>=3.8.0",
    "numpy>=1.25.2",
]
readme = "README.md"
license = {text = "MIT"}

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.16.1",
    "py-spy>=0.3.14",
    "pytest>=7.4.2",
    "mypy>=1.6.0",
]

[tool.pdm.scripts]
benchmarks = {cmd = "python ./scripts/n_body_benchmarks.py"}
plots = {cmd = "python ./scripts/n_body_plots.py"}
