[package]
name = "nbodysolver"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
categories = ["science"]
description = "An n-body solver written in Rust."

[dependencies]
itertools = "0.11.0"
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
num = "0.4.1"
