[package]
name = "nbodysolver"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
categories = ["science"]
description = "An n-body solver written in Rust."

[dependencies]
itertools = { workspace = true }
ndarray = { workspace = true }
ndarray-linalg = { workspace = true }
num = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
plotters = { workspace = true, optional = true }
plotly = { workspace = true, optional = true }

[features]
plot = ["dep:plotters", "dep:plotly"]
